fixing the responsiveness not working on iPhone 11
fixed minor responsiveness issues

--- a/style.css
+++ b/style.css
@@ -145,15 +145,15 @@ body{
         padding-top: 15%;
     }
     .mountain{
-        padding-top: 38%;
+        padding-top: 45%;
     }
 }
 @media (max-width:600px) {
     .fbg{
-        padding-top: 10%;
+        padding-top: 15%;
     }
     .mountain{
-        padding-top: 40%;
+        padding-top: 50%;
     }
 }
 @media (max-width:576px) {
@@ -167,6 +167,6 @@ body{
         font-size: 1rem;
     }
     .mountain{
-        padding-top: 45%;
+        padding-top: 55%;
     }
 }
